src/test/deca/context/invalid/opBool-icompatible-2.context
opBool-icompatible-2.deca:2:
